Fixed overflow

--- a/src/style/components/side-bar.scss
+++ b/src/style/components/side-bar.scss
@@ -5,6 +5,7 @@
   color: $white;
   background-color: $grey;
   position: fixed;
+  overflow-y: auto;
   height: 100%;
   top: 0;
   left: 0;
