--- a/src/style/components/to-do.scss
+++ b/src/style/components/to-do.scss
@@ -5,6 +5,7 @@
   @include flex-column;
   width: 100%;
   padding: 1%;
+  overflow-y: auto;
   .card-container {
     @include flex-column;
     width: 25%;
